--- a/index.html
+++ b/index.html
@@ -11,4 +11,8 @@
   <div class="yes">
     AAAAAAAAAAAAAAAAAAAAAAAAAAAA
   </div>
+<audio controls>
+  <source src="font/explosion-42132.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
 </body>
